NLA Sidebar tab doesn’t refresh on keyframe creation and there is no UI change to indicate action selection in the track list #97372

Closed
opened 2022-04-15 23:09:00 +02:00 by Brad Clark · 13 comments
Member

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: Quadro RTX 3000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.88

Blender Version
Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: cc66d1020c
Worked: Never

Short description of error
NLA Sidebar tab doesn’t refresh on keyframe creation when first using the NLA and there is no UI change to indicate action selection in the track list so a user doesn't know they need to select it to get to the settings they need. Once they do select it, they have no idea of the current selected state, as there is no UI change to show it is selected/active or not.

Exact steps for others to reproduce the error

Creating from scratch workflow 1 When using the NLA for the first time

  • Open Blender and change the timeline view to the NLA editor
  • Hit N or Menu- view-sidebar to show an empty sidebar area
  • Select the default cube (if you don't have it create a cube) and keyframe the cube. at frame 1 and frame 20
  • Notice that keyframes are created and selected in the timeline after creation yet the NLA UI side panel remains blank. No update has happened to make the action selected or active.
  • Also notice that the ACTION is always colored and looks like it is selected but the Theme NLA setting "Source List Text Highlight" doesn't seem to effect the Text on the Action display.
  • Next click on the object name (Cube or the action name (Cube action) in the left track list of the NLA, Notice that once you do it refreshes and the sidebar panel now shows settings for the current action. Notice that there NO UI change to indicate that after clicking on the Action name in the track list that it has been selected.
    #Once you have clicked on it and caused the sidebar to refresh, it never goes away, it doesn't go back to being blank, it always shows the settings.

Suggested fix. The sidebar should refresh to with creation of first key or action, it should never be blank when an object is selected and it has keyframes inserted, starting a new action. The theme should indicate the selected state of the default action track.

There are other issues around the UI but they are more design while this is a UI bug.

NLA UI.png

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: Quadro RTX 3000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.88 **Blender Version** Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `cc66d1020c` Worked: Never **Short description of error** NLA Sidebar tab doesn’t refresh on keyframe creation when first using the NLA and there is no UI change to indicate action selection in the track list so a user doesn't know they need to select it to get to the settings they need. Once they do select it, they have no idea of the current selected state, as there is no UI change to show it is selected/active or not. **Exact steps for others to reproduce the error** Creating from scratch workflow 1 When using the NLA for the first time - Open Blender and change the timeline view to the NLA editor - Hit N or Menu- view-sidebar to show an empty sidebar area - Select the default cube (if you don't have it create a cube) and keyframe the cube. at frame 1 and frame 20 - Notice that keyframes are created and selected in the timeline after creation yet the NLA UI side panel remains blank. No update has happened to make the action selected or active. - Also notice that the ACTION is always colored and looks like it is selected but the Theme NLA setting "Source List Text Highlight" doesn't seem to effect the Text on the Action display. - Next click on the object name (Cube or the action name (Cube action) in the left track list of the NLA, Notice that once you do it refreshes and the sidebar panel now shows settings for the current action. Notice that there NO UI change to indicate that after clicking on the Action name in the track list that it has been selected. #Once you have clicked on it and caused the sidebar to refresh, it never goes away, it doesn't go back to being blank, it always shows the settings. Suggested fix. The sidebar should refresh to with creation of first key or action, it should never be blank when an object is selected and it has keyframes inserted, starting a new action. The theme should indicate the selected state of the default action track. There are other issues around the UI but they are more design while this is a UI bug. ![NLA UI.png](https://archive.blender.org/developer/F13003222/NLA_UI.png)
Author
Member

Added subscriber: @BClark

Added subscriber: @BClark

#87681 was marked as duplicate of this issue

#87681 was marked as duplicate of this issue

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @wbmoss_dev

Added subscriber: @wbmoss_dev
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

This was already reported in #87681 (UI bugs in NLA Editor and Action Editor), which was falsely closed.
Will merge reports and update that other one with additional information from this one.

This was already reported in #87681 (UI bugs in NLA Editor and Action Editor), which was falsely closed. Will merge reports and update that other one with additional information from this one.
Member

Well actually, will merge the other one here since the description is spot on here, just dropping my note from the other report:

In #87681#1150543, @lichtwerk wrote:
in regards to Bug 1:

  • nla_animdata_panel_poll will call nla_panel_context and at this point the (only?) bAnimListElem from ANIM_animdata_filter is of type ANIMTYPE_NLAACTION.
  • that type is not covered so poll will never be true
  • investigating ANIMTYPE_NLAACTION atm. to see if just permitting it along the other types in nla_panel_context with be OK (seems to work - but want to be sure)
  • also would still need to explain the difference between this (ANIMTYPE_NLAACTION) and what happens after clicking header/track (then we also get ANIMTYPE_OBJECT afaict)
Well actually, will merge the other one here since the description is spot on here, just dropping my note from the other report: > In #87681#1150543, @lichtwerk wrote: > in regards to Bug 1: > - `nla_animdata_panel_poll` will call `nla_panel_context` and at this point the (only?) bAnimListElem from `ANIM_animdata_filter` is of type `ANIMTYPE_NLAACTION`. > - that type is not covered so poll will never be true > - investigating `ANIMTYPE_NLAACTION` atm. to see if just permitting it along the other types in `nla_panel_context` with be OK (seems to work - but want to be sure) > - also would still need to explain the difference between this (ANIMTYPE_NLAACTION) and what happens after clicking header/track (then we also get `ANIMTYPE_OBJECT` afaict)
Member

Added subscribers: @Matthew-Hinson, @dr.sybren

Added subscribers: @Matthew-Hinson, @dr.sybren
Member

Added subscriber: @nrupsis

Added subscriber: @nrupsis
Nate Rupsis self-assigned this 2022-05-02 06:13:51 +02:00

This issue was referenced by 61e8310b75

This issue was referenced by 61e8310b7581e8a128f5610d86ab2566852aa4dc
Member

Do we consider this resolved since {61e8310b75}?
Otherwise: could we update the report description so it is clear what still remains to be done?

Do we consider this resolved since {61e8310b75}? Otherwise: could we update the report description so it is clear what still remains to be done?
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author
Member

Ah thank you, yes it is resolved with that patch.

Ah thank you, yes it is resolved with that patch.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97372
No description provided.